# ea-24

./: .gitignore  download_lucide.py  ea-server-installer.iss  fix_fonts.py  inject_cookies.py  launch_and_trade.js  package-lock.json  patch.js  patch.py  patch_ea.sh  patch_updater.sh  scan_launch.js  telegram_downloader.py  telegram_session.session  test.swift  test_history.js  test_order.js  test_setup.js  test_ws.js  test_ws.py  test_ws_debug.py
.agent/workflows/: build.md  rules.md  run.md  stop.md  update-server.md
.github/workflows/: build-client.yml  build-desktop.yml  build-server.yml  release.yml
.openclaw/: workspace-state.json
OTP24_Reader.app/Contents/: Info.plist
OTP24_Reader.app/Contents/MacOS/: applet
OTP24_Reader.app/Contents/_CodeSignature/: CodeResources
cashflow-ios/: project.yml  test_apps_parse.swift  test_apps_parse2.swift  test_check_version.py  test_cookie.swift  test_cookie_full.swift  test_cookie_python.py  test_create.swift  test_decode.swift  test_netflix_cookie.py  test_netflix_urllib.py  test_otp.swift  test_otp_apps.swift  test_otp_cookie.swift  test_otp_cookie_decode.swift  test_otp_cookie_now.swift  test_parse.swift  test_parse2.swift  test_xor.swift  test_xor2.swift
cashflow-ios/Cashflow/: CashflowApp.swift  ContentView.swift  Info.plist
cashflow-ios/Cashflow.xcodeproj/: project.pbxproj
cashflow-ios/Cashflow/Models/: AppState.swift  OTP24Models.swift  OTP24State.swift  Transaction.swift
cashflow-ios/Cashflow/Services/: APIService.swift  CookieManager.swift  OTP24Client.swift
cashflow-ios/Cashflow/Theme/: AuraTheme.swift
code_ui/: README.md  pubspec.yaml
code_ui/android/: build.gradle.kts  settings.gradle.kts
code_ui/ios/: Podfile
code_ui/lib/: app_config.dart  main.dart  social_config.dart
code_ui/linux/: CMakeLists.txt
code_ui/test/: widget_test.dart
ea-client/: .env.local  .eslintignore  .gitignore  fix_icon.py  index.html  package-lock.json  package.json  vite.config.ts
ea-client/src/: App.tsx  index.css  main.tsx
ea-client/src-tauri/: .gitignore  Cargo.toml  err.txt  err2.txt  tauri.conf.json
ea-client/src-tauri/.cargo/: config.toml
ea-client/src-tauri/capabilities/: default.json
ea-client/src-tauri/icons/: icon.icns
ea-client/src-tauri/src/: main.rs
ea-ios/: Package.swift  project.yml  test_font.swift
ea-ios/EA24/: ContentView.swift  EA24App.swift  Info.plist  Theme.swift
ea-ios/EA24.xcodeproj/: project.pbxproj
ea-ios/EA24Widgets/: EA24StatusWidget.swift  EA24WidgetsBundle.swift  Info.plist  TradingActivityAttributes.swift  TradingLiveActivity.swift
ea-ios/build_agent/: info.plist
ea-server/: .env  Cargo.toml  build_error.txt  build_errors_full.txt  build_errors_only.txt  build_errs.txt  cleanup_wine.py  crash_test.js  parse_test.rs  refactor.py  refactor2.py  refactor_main.py  remove_wine.py  scratch.rs  setup.iss  stub_wine.py  telegram_downloader.py  telegram_session.session
ea-server/.cargo/: config.toml
ea-server/assets/: ea-server.desktop
ea-server/data/: ea24.db  ea24.db-shm  ea24.db-wal
ea-server/debian/: postinst
ea-server/deploy/: deploy-local-to-vps.sh  ea-server.service  setup-vps.sh  setup-vps.sh_patch  update-ea-server.sh
ea-server/mt5/: EATradingClient.mq5
ea-server/src/: ai_engine.rs  chart_gen.rs  db.rs  discord_bot.rs  drive.rs  gcs.rs  gui.rs  ict.rs  main.rs  news.rs  notify.rs  order_guard.rs  otp24.rs  pipeline.rs  pipeline_v8.rs  position_manager.rs  smc.rs  strategy.rs  tray.rs  updater.rs
ea24-mobile/: README.md  pubspec.yaml
ea24-mobile/assets/: fitness_language.json  map_style.json  mindgif.json  star.json
ea24-mobile/ios/: Podfile
ea24-mobile/lib/: lang_config.dart  main.dart  main_otp24.dart  my_theme.dart  other_config.dart
ea24-mobile/linux/: CMakeLists.txt
ea24-mobile/test/: widget_test.dart
ea24-mobile/web/: index.html  manifest.json
ea24-mobile/windows/: CMakeLists.txt
orion-rs/: Cargo.toml
orion-rs/src/: main.rs
otp24-ios/: project.yml
otp24-ios/OTP24/: ContentView.swift  Info.plist  OTP24App.swift  Theme.swift
otp24-ios/OTP24.xcodeproj/: project.pbxproj
otp24-reader/: OTP24 Explorer.spec  OTPReader.swift  cookie-injector.crx  cookie-injector.pem  gui_app.py  index.js  inject_netflix.py  netflix_cookies.json  reader.py  sync-tool.html  ui_preview.html
otp24-reader/cookie-injector/: cached_cookies.json  manifest.json  popup.html  popup.js
otp24hr_ext/: background.js  content.js  loader.js  manifest.json  popup.html  popup.js  style.css
(+1090 files in other folders)
