[package]
name = "ea-server"
version = "0.2.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server (ใช้ v0.21 เพื่อความเสถียร)
tokio-tungstenite = "0.21"

# Utility for async streams
futures-util = "0.3"

# JSON serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Random number generation (สำหรับ Mock Tick Data)
rand = "0.8"

# Logging
env_logger = "0.11"
log = "0.4"
