[package]
name = "ea-server"
version = "0.4.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server (ใช้ v0.21 เพื่อความเสถียร)
tokio-tungstenite = "0.21"

# Utility for async streams
futures-util = "0.3"

# JSON serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client for Auto-Updater
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Random number generation (สำหรับ Mock Tick Data)
rand = "0.8"

# Logging
env_logger = "0.11"
log = "0.4"

# Socket options (SO_REUSEADDR)
socket2 = "0.5"

# Embedded SQLite database (using SQLCipher for AES-256 encryption)
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# System tray icon (Windows)
trayicon = "0.4"
winit = "0.30"
image = "0.25"
