[package]
name = "ea-server"
version = "6.3.93"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server (ใช้ v0.21 เพื่อความเสถียร)
tokio-tungstenite = "0.21"

# Utility for async streams
futures-util = "0.3"

# JSON serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client for Auto-Updater
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Random number generation (สำหรับ Mock Tick Data)
rand = "0.8"

# Logging
env_logger = "0.11"
log = "0.4"

# Socket options (SO_REUSEADDR)
socket2 = "0.5"

# PostgreSQL Database (Async)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
dotenvy = "0.15"
chrono = "0.4"

# Channels & concurrency
crossbeam-channel = "0.5"

# System info tracking
sysinfo = "0.33"

# Web dashboard
rust-embed = "8.11.0"
mime_guess = "2.0.5"
base64 = "0.22.1"

[package.metadata.deb]
maintainer = "EA Developer"
copyright = "2024"
license-file = []
extended-description = "EA Trading Server backend component"
depends = "$auto"
section = "finance"
priority = "optional"
maintainer-scripts = "debian/"
assets = [
    ["target/release/ea-server", "opt/ea-24/", "777"],
    ["assets/ea-server.desktop", "usr/share/applications/", "644"],
    ["assets/icon.png", "opt/ea-24/", "644"],
]
